Fix right spacing on slider on mobile

--- a/version_control/katalyst_by_codurance/css/modules/testimonial.css
+++ b/version_control/katalyst_by_codurance/css/modules/testimonial.css
@@ -33,7 +33,7 @@
     .testimonials-wrapper {
         overflow: scroll;
         scroll-snap-type: x mandatory;
-        padding-right: var(--space-l);
+        padding-right: var(--space-s);
         margin-left: var(--space-s);
         max-width: initial;
     }
